--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,6 @@
 
 <header style="display: flex; align-items: center; gap: 1rem; padding: 1rem;">
-    <img src="/images/logo.png" alt="Symbia Logo" style="height: 50px;" />
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/custom.css" />
+    <img src="{{ .Site.BaseURL }}images/logo.png" alt="Symbia Logo" style="height: 50px;" />
     <h1 style="margin: 0;">Symbia株式会社</h1>
 </header>
